Get thesis into its final form

--- a/images/current_balance.tex
+++ b/images/current_balance.tex
@@ -483,7 +483,7 @@ mark options = {
 (-1.9386903771871857, 4.824082383350291)
 (-1.869866181206814, 4.877080107549691)
 };
-\addlegendentry{Pure Pulsed}
+\addlegendentry{Purely Pulsed}
 \node at (axis cs:0, 2.5) [,
 color={rgb,1:red,0.00000000;green,0.00000000;blue,0.00000000}, draw opacity=1.0,
 rotate=0.0
