--- a/conclusion.tex
+++ b/conclusion.tex
@@ -2,12 +2,12 @@
 
 \replaced{The goal of this document was to fairly compare pulsed and steady-state tokamaks -- using a single, comprehensive model. The main conclusion is that both modes of operation can produce economically competitive reactors, assuming some technological advancement. The advancement most supported by the results was in magnet technology, as MIT is currently exploring with high-temperature superconducting (HTS) tape.}{The goal of this document was to develop a simple fusion systems model that can work for both pulsed and steady-state tokamaks. The main conclusion was that the best way to build a more efficient, compact reactor is to invest in strong magnets -- as MIT is doing with high-temperature superconducting (HTS) tape. Further it was shown that to best utilize materials, the tape should be incorporated into the toroidal field coils for steady-state machines and in the central solenoid for pulsed ones.} \added{However a more fundamental result is that pulsed operation can be economically competitive and the United States should be putting a larger research effort behind it.}
 
-\replaced{Although some skepticism should be allotted to these conclusions, it was shown that this simple algebraic solver was capable of matching more sophisticated frameworks with speed and ease. This model may not provide an engineer's level of rigor for cost measurements, but does produce empirically-drawn trends applicable to the target physics audience. Ultimately, it serves to complement higher dimension codes when researchers want to investigate new areas of reactor space.}{Although some skepticism should be allotted to these conclusions, it was shown that this simple algebraic solver matched sophisticated multiyear research studies with speed and ease. This model may not provide an engineer's rigor in measuring cost, but the same can be said for any code or theory. The fusion system is as nonlinear a problem as they come, but we still managed to build a framework that can hone even a well-trained physicist's intuition.}
+\replaced{Although some skepticism should be allotted to these conclusions, it was shown that this simple algebraic solver was capable of matching more sophisticated frameworks with speed and ease. This model may not provide an engineer's level of rigor for cost measurements, but does produce empirically-drawn costing trends applicable to the target physics audience. Ultimately, it serves to complement higher dimension codes when researchers want to investigate new areas of reactor space.}{Although some skepticism should be allotted to these conclusions, it was shown that this simple algebraic solver matched sophisticated multiyear research studies with speed and ease. This model may not provide an engineer's rigor in measuring cost, but the same can be said for any code or theory. The fusion system is as nonlinear a problem as they come, but we still managed to build a framework that can hone even a well-trained physicist's intuition.}
 
 \deleted{The final point to make is that this model actually predicts that HTS technology can provide the optimum magnetic field strength for a reactor. Once HTS doubles the maximum achievable teslas, the law of diminishing returns heavily kicks in. This of course assumes H-Mode D-T plasmas at the Greenwald density limit.}
 
 
-\added{What the results truly show, though, is that no economic reactor can be built using existing technology -- regardless of whether it runs as pulsed or steady-state. This is why every design from the literature exceeds standard values for $H$ and $N_G$. Therefore, some technological advancement is needed. This may come from research and development into:}
+\added{What the results truly show, though, is that no economic reactor can be built using existing technology -- regardless of whether it runs as pulsed or steady-state. This is why every design from the literature exceeds standard values for $H$ and $N_G$. Therefore, some technological advancement is needed. These may come from research and development into:}
 \begin{itemize}[noitemsep,topsep=0pt]
 	\item \added{building stronger magnets using HTS tape}
 	\item \added{discovering reliable regimes of enhanced confinement}
